--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/forms": "~8.0.3",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
+    "@angular/pwa": "^0.802.0",
     "@angular/router": "~8.0.3",
+    "@angular/service-worker": "~8.0.3",
     "angular-cli-ghpages": "^0.6.0-rc.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
